<resources>
    <string name="main_text_view">Once you add a favorite, you will see it listed here.</string>
    <string name="main_date">Released on: %s</string>
    <string name="main_status">Status: %s</string>
    <string name="pref_theme_grey_label">Grey</string>
    <string name="pref_theme_blue_grey_label">Blue Grey</string>
    <string name="pref_theme_title">Themes</string>
    <string name="pref_season_number_title">Season number format</string>
    <string name="pref_title_adult_search">Adult search</string>
    <string name="pref_description_adult_search_off">Enabling will make adult content available in the search
    </string>
    <string name="pref_description_adult_search_on">Disabling will make adult content unavailable in the search
    </string>
    <string name="pref_about_title">About</string>
    <string name="pref_notifications">Notifications</string>
    <string name="nav_feedback">Send feedback</string>
    <string name="search_label">WatchNext</string>
    <string name="search_hint">Search The MovieDb</string>
    <string name="menu_search">Search</string>
    <string name="settings_description">Search for latest movies and series</string>
    <string name="search_query_hint">Search The MovieDb</string>
    <string name="movie">MOVIE</string>
    <string name="tv_series">TV SERIES</string>
    <string name="no_results">No results found</string>
    <string name="search_empty_text_movie">Please use the search to look up for a movie.  Powered by THE MOVIE DB</string>
    <string name="search_empty_text_serie">Please use the search to look up for a serie.  Powered by THE MOVIE DB</string>
    <string name="search">web search</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_menu_title">Title</string>
    <string name="sort_menu_highest_rated">Highest Rated</string>
    <string name="sort_menu_lowest_rated">Lowest Rated</string>
    <string name="title_activity_review">Comments</string>
    <string name="title_activity_credits_cast">Cast</string>
    <string name="title_activity_credits_crew">Crew</string>
    <string name="title_activity_tabbed_movies">Movies</string>
    <string name="title_activity_tabbed_series">Series</string>
    <string name="title_activity_theater">In Theaters</string>
    <string name="title_activity_airing_today">Airing Today</string>
    <string name="title_activity_main">Favorites</string>
    <string name="title_activity_settings">Settings</string>
    <string name="subtitle_activity_videos">Videos</string>
    <string name="subtitle_activity_seasons">Seasons</string>
    <string name="subtitle_activity_reviews">Comments</string>
    <string name="tab_popular">Popular</string>
    <string name="tab_top_rated">Top Rated</string>
    <string name="tab_on_the_air">On The Air</string>
    <string name="tab_upcoming">Upcoming</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_trending">Trending</string>
    <string name="tab_trending_movies">Movies</string>
    <string name="tab_trending_series">Series</string>
    <string name="tab_trending_people">People</string>
    <string name="title_trending_movies">Trending Movies</string>
    <string name="title_trending_series">Trending Series</string>
    <string name="title_trending_people">Trending People</string>
    <string name="toast_add_to_favorites">Added to favorites</string>
    <string name="toast_removed_from_favorites">Item no longer in favorites</string>
    <string name="toast_remove_from_favorites">Removed from favorites</string>
    <string name="toast_notification_reminder">Notification reminder scheduled</string>
    <string name="toast_notification_cancelled">Notification reminder cancelled</string>
    <string name="toast_notification_canceled">Notification reminder cancelled</string>
    <string name="remind_all_episodes">All episodes reminder</string>
    <string name="stop_reminding_all">Stop reminding episodes</string>
    <string name="toast_subscribed">Subscribed to all episodes. Added to Favorites.</string>
    <string name="toast_subscribed_only">Subscribed to all episodes.</string>
    <string name="toast_unsubscribed">Unsubscribed from episode reminders.</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_schedule">Upcoming Episodes</string>
    <string name="upcoming_empty_text">No upcoming episodes for your subscribed series. Subscribe to more series to see them here!</string>
    <string name="toast_aired_already">This episode aired already</string>
    <string name="snackbar_no_connection">No connection</string>
    <string name="no_apps_installed">No apps installed</string>
    <string name="snackbar_notifications_required">Notifications are required for reminders</string>
    <string name="snackbar_notifications_disabled">Notifications are disabled</string>
    <string name="snackbar_grant">Grant</string>
    <string name="snackbar_settings">Settings</string>
    <string name="toast_subscription_handled">Reminders already handled by series subscription</string>
    <string name="season">Season %d</string>
    <plurals name="numberOfEpisodes">
        <item quantity="zero">%d Episodes</item>
        <item quantity="one">%d Episode</item>
        <item quantity="other">%d Episodes</item>
    </plurals>
    <string name="seasons_empty_text">No seasons found</string>
    <string name="seasons_text_view_button">Seasons</string>
    <string name="guest_stars">Guest Stars</string>
    <string name="directors">Directed by</string>
    <string name="writers">Written by</string>
    <string name="season_specials">Specials</string>
    <string name="view_details">view details</string>
    <string name="cast_empty_text">No cast found</string>
    <string name="crew_empty_text">No crew found</string>
    <string name="biography_text">Biography</string>
    <string name="biography_not_available">There is no biography available for now. That\'s all we know.</string>
    <string name="cast_text_view">Cast</string>
    <string name="more_text_view">more</string>
    <string name="crew_text_view">Crew</string>
    <string name="menu_share">Share</string>
    <string name="feedback">"%1s %2s, Android %3s  Please send your feedback below this line  "</string>
    <string name="videos_empty_text">No videos found</string>
    <string name="videos_text_view_button">Videos</string>
    <string name="review_empty_text">No comments found</string>
    <string name="reviews_text_view_button">Comments</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="overview_text">overview</string>
    <string name="runtime">%s min</string>
    <string name="status_text">Status</string>
    <string name="production_companies">Production companies</string>
    <string name="production_countries">Production Countries</string>
    <string name="genres">Genres</string>
    <string name="no_app_available">No app available to handle this</string>
    <string name="notification_dismiss">Dismiss</string>
    <string name="notification_text">Airing today: %s</string>
    <string name="sync_in_progress">Sync In Progress</string>
    <string name="sync_content_text">Downloading new content from The MovieDb</string>
    <string name="about_version">Build %s</string>
    <string name="open_source_text">The application is open source at https://lineargs.github.io/WatchNextApp</string>
    <string name="text_not_available">N / A</string>
    <string name="libraries">Libraries</string>
    <string name="library_link">website</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="movies_count">movies</string>
    <string name="series_count">series</string>
    <string name="runtime_of_all_movies">Runtime of all movies</string>
    <string name="nav_header_movies">Explore Movies</string>
    <string name="nav_header_series">Explore Series</string>
    <string name="app_name" translatable="false">WatchNext</string>
    <string name="nav_header_text" translatable="false">Watch Next</string>
    <string name="pref_theme_key" translatable="false">app_theme</string>
    <string name="pref_theme_grey_key" translatable="false">theme_grey</string>
    <string name="pref_theme_blue_grey_key" translatable="false">theme_blue_grey</string>
    <string name="pref_season_number_key" translatable="false">season_number</string>
    <string name="pref_season_number_SO_key" translatable="false">capital_with_zero</string>
    <string name="pref_season_number_S_key" translatable="false">capital_no_zero</string>
    <string name="pref_season_number_so_key" translatable="false">lower_with_zero</string>
    <string name="pref_season_number_s_key" translatable="false">lower_no_zero</string>
    <string name="pref_season_number_SO_label" translatable="false">S01E01</string>
    <string name="pref_season_number_S_label" translatable="false">S1E1</string>
    <string name="pref_season_number_so_label" translatable="false">s01e01</string>
    <string name="pref_season_number_s_label" translatable="false">s1e1</string>
    <string name="adult_search" translatable="false">adult_search</string>
    <string name="pref_about_key" translatable="false">about_key</string>
    <string name="pref_locale_key" translatable="false">locale</string>
    <string name="pref_notifications_key" translatable="false">notifications</string>
    <string name="content_authority" translatable="false">com.lineargs.watchnext</string>
    <string name="sync_account_type" translatable="false">lineargs.watchnext.com</string>
    <string name="sync_account_name" translatable="false">WatchNext Sync</string>
    <string name="sync_complete" translatable="false">Sync Complete</string>
    <string name="updated_content_text" translatable="false">The app content has been updated. Come and check out the new and updated movies and series.</string>
    <string name="you_tube" translatable="false">http://www.youtube.com/watch?v=%s</string>
    <string name="share_movie" translatable="false">https://www.themoviedb.org/movie/%s #WatchNext</string>
    <string name="share_serie" translatable="false">https://www.themoviedb.org/tv/%s #WatchNext</string>
    <string name="imdb" translatable="false">imdb</string>
    <string name="youtube" translatable="false">you tube</string>
    <string name="google_play" translatable="false">google play</string>
    <string name="you_tube_image" translatable="false">https://img.youtube.com/vi/%s/0.jpg</string>
    <string name="date_pattern" translatable="false">dd MMM yyyy</string>
    <string name="tools_episode_title" translatable="false">Episode Title</string>
    <string name="tools_episode_date" translatable="false">29/10/1988</string>
    <string name="tools_episode_vote" translatable="false">8 / 10</string>
    <string name="tools_movie_title" translatable="false">Movie Title</string>
    <string name="tools_movie_date" translatable="false">29/10/1988</string>
    <string name="tools_movie_vote" translatable="false">8 / 10</string>
    <string name="tools_season_title" translatable="false">Season 12345</string>
    <string name="tools_season_episodes" translatable="false">24 Episodes</string>
    <string name="tools_runtime" translatable="false">135 mins</string>
    <string name="tools_companies" translatable="false">Warner Bros</string>
    <string name="tmdb_notice" translatable="false">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="tmdb_terms" translatable="false">TMDb Terms</string>
    <string name="tmdb_api_terms" translatable="false">TMDb API Terms</string>
    <string name="movie_poster_content_description" translatable="false">Movie poster</string>
    <string name="star_image_content_description" translatable="false">Star image</string>
    <string name="empty_image_content_description" translatable="false">Conversation image for empty view</string>
</resources>