<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="@dimen/padding_six"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.AppCompatTextView
        style="@style/TitleTextCenterVertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/app_name" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/version_text"
        style="@style/DetailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/about_version" />

    <android.support.v7.widget.AppCompatTextView
        style="@style/DetailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_six"
        android:autoLink="web"
        android:text="@string/open_source_text" />

    <android.support.v7.widget.AppCompatTextView
        style="@style/DetailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tmdb_notice" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/tmdb_terms"
                style="?android:borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tmdb_terms"
                android:textColor="?colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/tmdb_api_terms"
                style="?android:borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tmdb_api_terms"
                android:textColor="?colorPrimary" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>