<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/title"
        style="@style/TitleTextCenterVertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:maxLines="2"
        tools:text="@string/tools_movie_title" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/release_date"
        style="@style/DetailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_event_black"
        android:drawablePadding="@dimen/text_view_drawable_padding"
        android:drawableStart="@drawable/icon_event_black"
        tools:text="@string/tools_movie_date" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/runtime"
        style="@style/DetailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_timelapse_black"
        android:drawablePadding="@dimen/text_view_drawable_padding"
        android:drawableStart="@drawable/icon_timelapse_black"
        tools:text="@string/tools_runtime" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/vote_average"
        style="@style/DetailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_star_black"
        android:drawablePadding="@dimen/text_view_drawable_padding"
        android:drawableStart="@drawable/icon_star_black"
        tools:text="@string/tools_movie_vote" />

    <LinearLayout
        android:id="@+id/overview_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/text_view_min_height"
            android:text="@string/overview_text"
            android:textAllCaps="true"
            android:textColor="?colorPrimary"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/overview"
            style="@style/DetailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/genres_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/padding_twelve"
            android:text="@string/genres"
            android:textAllCaps="true"
            android:textColor="?colorPrimary"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            tools:text="@string/tools_companies" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/companies_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/padding_twelve"
            android:text="@string/production_companies"
            android:textAllCaps="true"
            android:textColor="?colorPrimary"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/companies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            tools:text="@string/tools_companies" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/countries_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/padding_twelve"
            android:text="@string/production_countries"
            android:textAllCaps="true"
            android:textColor="?colorPrimary"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/countries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            tools:text="@string/tools_companies" />
    </LinearLayout>

</LinearLayout>