<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/small_card_view_corner_radius"
    app:cardElevation="@dimen/card_view_elevation"
    android:layout_margin="@dimen/padding_six">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/poster_path"
            android:layout_width="match_parent"
            android:layout_height="@dimen/seasons_poster_height"
            android:adjustViewBounds="true"
            android:contentDescription="@string/empty_image_content_description"
            tools:src="@drawable/ic_launcher_new" />

        <View
            android:id="@+id/scrim"
            android:layout_width="match_parent"
            android:layout_height="@dimen/seasons_poster_height"
            android:background="@color/scrim" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/details"
            style="@style/DetailText.Seasons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/poster_path"
            android:layout_marginLeft="@dimen/card_view_padding"
            android:layout_marginStart="@dimen/card_view_padding"
            android:text="@string/view_details" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/TitleTextCenterVertical"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_min_height"
            android:layout_alignBottom="@+id/poster_path"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/seasons_episodes"
            android:layout_toStartOf="@+id/seasons_episodes"
            android:paddingEnd="@dimen/card_view_padding"
            android:paddingLeft="@dimen/card_view_padding"
            android:paddingRight="@dimen/card_view_padding"
            android:paddingStart="@dimen/card_view_padding"
            android:textColor="@color/colorWhite"
            tools:text="@string/tools_season_title" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/seasons_episodes"
            style="@style/DetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/poster_path"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:paddingEnd="@dimen/card_view_padding"
            android:paddingLeft="@dimen/card_view_padding"
            android:paddingRight="@dimen/card_view_padding"
            android:paddingStart="@dimen/card_view_padding"
            android:textColor="@color/colorWhite"
            tools:text="@string/tools_season_episodes" />

    </RelativeLayout>
</android.support.v7.widget.CardView>